<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bn_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color_transparent"
                android:text="@string/find_device"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/device_role"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <Button
            android:id="@+id/bn_remove_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/app_color_transparent"
            android:text="@string/out_group"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <Button
            android:id="@+id/bn_in_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/app_color_transparent"
            android:text="@string/in_chat_room"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textUsableDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/usable_device"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/Tiffany"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <ListView
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>